--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 	<table cellspacing="20">
 		<tr>
-			<td><img src="images/avatar.jpg" alt="здесь должен быть аватар" width="200"></td>
+			<td><img src="https://sun9-9.userapi.com/impf/c623927/v623927878/24be6/3-R2-rH58y0.jpg?size=442x442&quality=96&sign=ba6e7733a9b8367a8d36d1c7db724c7d&type=album" alt="здесь должен быть аватар" width="200"></td>
 			<td><h1>Илья Прихач</h1>
 	<p><em> Я бывший <strong>инженер-энергетик</strong></em></p>
-	<p>Я люблю прграммировать, унавать что-то новое, встречи с друзьями, ламповые вечера</p></td>
+	<p>Я люблю прграммировать, узнавать что-то новое, встречи с друзьями, ламповые вечера</p></td>
 		</tr>
 	</table>
 	
@@ -64,12 +64,12 @@
 
     <hr>
 
-<h2>Youtube блогеры, которые вдохнавили</h2>
+<h2>Youtube блогеры, которые вдохновили</h2>
 <a href="youtube.html" target="_blank">Посмотреть список</a>
 
 <hr>
 
-<h2>Связаться со сной</h2>
+<h2>Связаться со мной</h2>
 <form>
 	<form action="/"></form>
 	<label for="name">Ваше имя</label>
